--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,4 +4,11 @@ main: me.math.stevydiscordpaper.Main
 api-version: 1.16
 load: STARTUP
 authors: [ MathDuck ]
-description: Version Standalone de mon bot discord pour MC
+description: Discord Bot for Paper
+commands:
+  reloadconfig:
+    description: Reload the config file
+    usage: /reloadconfig
+  discord:
+    description: Reload discord bot
+    usage: /discord
